Adição de comentários

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <button>Saiba mais</button>
             </div>
         </header>
+       <!--Pacotes-->
         <section id="pacotes" class="pacotes">
             <h1 class="pacotes-title">Nossos Pacotes</h1>
             <div class="pacotes-cards">
